--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 99)
 
 include_directories(interfaces)
 
-add_executable(gow_compiler main.c
+add_executable(gowc main.c
         src/interpreter.c
         src/lexer.c
         src/parser.c
